2005-01-26  Jackson Harper  <jackson@ximian.com>

	* TabControl.cs: Implement FillToRight size mode with vertically
	rendered tabs.

2005-01-26  Jordi Mas i Hernandez <jordi@ximian.com>

	* ControlPaint.cs, ThemeWin32Classic.cs
		- Fixes DrawFocusRectangle

2005-01-26  Jordi Mas i Hernandez <jordi@ximian.com>

	* MenuAPI.cs: 
		- MenuBar tracking only starts when item is first clicked 
		- Fixes menu hidding for multiple subitems
		- Unselect item in MenuBar when item Executed
		- Fixes bug 71495

2005-01-25  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListControl.cs: 
		- IsInputKey for ListBox
	* ListBox.cs:
		- Focus item 
		- Shift and Control item selection
		- Implement SelectionMode.MultiExtended
		- Fixes RightToLeft
	* ComboBox.cs:
		- IsInputKey implemented
		- Do not generate OnTextChangedEdit on internal txt changes		
		
2005-01-23  Peter Bartok  <pbartok@novell.com>

	* AccessibleObject.cs: Partially implemented Select()
	* MonthCalendar.cs: Added missing attributes and events
	* Form.cs: Fixed CreateParams behaviour, now controls derived from
	  form can properly override CreateParams.
	* XplatUI.cs, XplatUIDriver.cs, XplatUIOSX.cs, XplatUIWin32.cs,
	  XplatUIX11.cs: Dropped RefreshWindow method, not needed if
	  Control performs Invalidate & Update
	* NativeWindow (CreateHandle): Added special handling for Form
	  and Form.FormParent classes to allow overriding of From.CreateParams
	* Control.cs:
	  - ControlNativeWindow: Renamed 'control' variable to more intuitive
	    name 'owner'
	  - ControlNativeWindow: Added Owner property
	  - Removed usage of Refresh() on property changes, changed into 
	    Invalidate(), we need to wait until the queue is processed for 
	    updates, direct calls might cause problems if not all vars for 
	    Paint are initialized
	  - Added call to UpdateStyles() when creating the window, to set any
	    styles that CreateWindow might have ignored.
	  - Added support for Form CreateParent overrides to UpdateStyles()